# pentaminos

./: .gitignore  CMakeLists.txt  COMECE_AQUI.md  README.md  compilar.bat  copiar_dlls.ps1  main.cpp  menu.bat  menu.ps1
include/: AVLTree.h  Board.h  GraphSolver.h  Piece.h  State.h
src/: State.cpp
src/avl/: AVLTree.cpp  AVLTree.h
src/board/: Board.cpp  Board.h
src/graph/: GraphSolver.cpp  GraphSolver.h
src/piece/: Piece.cpp  Piece.h
src/state/: State.h
